# enhanced-search-mcp

./: -w  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  README.md  deploy.sh  docker-compose.searxng.yml  docker-compose.yml  pyproject.toml  start-ddg.sh  start.sh  test_local_config.py  test_mcp_capabilities.py
docs/: tech-stack.md
scripts/: verify-engines.py
searxng/: settings.yml
src/enhanced_search/: __init__.py  config.py  models.py  server.py
src/enhanced_search/cache/: redis_cache.py
src/enhanced_search/engines/: base.py  duckduckgo.py  fetcher.py  searxng.py
src/enhanced_search/handlers/: __init__.py  extract.py  fetch.py  history.py  search.py
src/enhanced_search/utils/: dedup.py  health_check.py  rate_limit.py  retry.py  text_analysis.py
tests/: conftest.py  test_cache.py  test_dedup.py  test_rate_limit.py  test_retry.py  test_text_analysis.py
