[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enhanced-search-mcp"
version = "1.1.0"
description = "Free powerful search MCP with SearXNG, DuckDuckGo and content fetching - no API keys required"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=7.0.0",
    "trafilatura>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
cache = ["redis>=5.0.0"]
playwright = ["playwright>=1.40.0"]
all = ["redis>=5.0.0", "playwright>=1.40.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
enhanced-search-mcp = "enhanced_search.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/enhanced_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
